# EzYTDownloader

./: .gitignore  CMakeLists.txt  README.md
python/: fetch.py
resources/: resources.qrc
resources/style/: dark_theme.qss
scripts/: ezytdownloader.desktop  install.sh  install_deps.sh  uninstall.sh
src/: Application.cpp  Application.h  ConvertWorker.cpp  ConvertWorker.h  DependencyChecker.cpp  DependencyChecker.h  DependencyDialog.cpp  DependencyDialog.h  DownloadManager.cpp  DownloadManager.h  DownloadWorker.cpp  DownloadWorker.h  FetchWorker.cpp  FetchWorker.h  MainWindow.cpp  MainWindow.h  ParallelDownloadManager.cpp  ParallelDownloadManager.h  PlaylistEntry.h  SettingsManager.cpp  SettingsManager.h  StreamInfo.h  Utils.cpp  Utils.h  main.cpp
